[tool.poetry]
name = "trt-huggingface-demo"
version = "0.1.0"
description = ""
authors = ["TensorRT [tensorrt@nvidia.com]"]
readme = "README.md"

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"
default = true

[[tool.poetry.source]]
name = "ngc_"
url = "https://pypi.ngc.nvidia.com"
secondary = true

[[tool.poetry.source]]
name = "torch_"
url = "https://download.pytorch.org/whl/cu121"
secondary = true

[tool.poetry.dependencies]
python = ">=3.8,<4"
numpy = "^1.24.4"
transformers = "4.31.0"
torch = {version = "2.1.0+cu121", source = "torch_"}
tabulate = "^0.9.0"
toml = "^0.10.2"
polygraphy = {version = "0.47.1", source = "ngc_"}
onnx = "1.13.1"
onnx-graphsurgeon = {version = "0.3.27", source = "ngc_"}
sentencepiece = "*"
protobuf = "*"
cuda-python = "*"
Pillow = "^10.0.0"
datasets = "^2.14.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "6.*"
psutil = "^5.9.4"
ipython = ">=8.10.0"
nbmake = "^1.3.5"
ipywidgets = "^8.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
